<resources>
    <string name="app_name">E-YOU</string>
    <string name="access_token">sk.eyJ1IjoiY2doZW9yZ2hlZHJhZ29zIiwiYSI6ImNsNnZndjlvNjA5MzAzZ3FscjV2bHEwd2YifQ.1b8ZiOLL_vhbUJGJaE7G4Q</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter Username…</string>
    <string name="enter_password">Enter Password…</string>
    <string name="loginLabel">Login</string>
    <string name="sign_in_btn_name">Sign in</string>
    <string name="go_to_register">Not Registered yet? Register Here.</string>
    <string name="register_label">Register</string>
    <string name="go_to_login_textview">Already Have an Account? Login Here.</string>
    <string name="register_btn_name">Register</string>
    <string name="enter_first_name">Enter first name…</string>
    <string name="enter_last_name">Enter last name…</string>
    <string name="retype_password">Retype Password…</string>
    <string name="enter_e_mail">Enter E-mail…</string>
    <string name="birth_date">Birth Date..</string>
    <string name="explore">Explore</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="map_key">AIzaSyDu52L3TYrGHHI0DFoDgoIdv4dizMzSVWU</string>
    <string name="female_radio_button_text">Female</string>
    <string name="male_radio_button_text">Male</string>
    <string name="close_button_updating_map">Close</string>
    <string name="type_of_incident_template">The type of incident is..</string>
    <string name="use_my_current_location_radio_button">Use my current location</string>
    <string name="pick_up_a_specific_location_radio_button">Pick up a specific location</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="loading">Loading....</string>
    <string name="add_photos_to_incident">Add photos to incident</string>
    <string name="describe_what_happen">Describe what happened</string>
    <string name="write_here_text">Write here..</string>
    <string name="top_10">Top 10</string>
    <string name="pct">pct</string>
    <string name="arond">\u0040username</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="view_photo_from_incidents">View Photo From Incidents</string>
    <string name="solve_this_incident">Solve this Incident</string>
    <string name="add_your_teammates">Add your teammates</string>
    <string name="type_here">Type here..</string>
    <string name="ranking">Ranking</string>
</resources>