<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".presentation.views.starting.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/username_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/field_margin_startend"
        android:layout_marginTop="@dimen/top_margin_to_field"
        android:layout_marginEnd="@dimen/field_margin_startend"
        app:boxStrokeWidth="@dimen/zero_dimension"
        app:boxStrokeWidthFocused="@dimen/zero_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="textFilter"
            android:background="@drawable/transparent_text"
            android:hint="@string/enter_username"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/field_margin_startend"
        android:layout_marginTop="@dimen/margin_between_fields"
        android:layout_marginEnd="@dimen/field_margin_startend"
        app:boxStrokeWidth="@dimen/zero_dimension"
        app:boxStrokeWidthFocused="@dimen/zero_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout_login"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_text"
            android:hint="@string/enter_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_confirm_button_startend"
        android:layout_marginTop="@dimen/top_margin_between_input_fields"
        android:layout_marginEnd="@dimen/margin_confirm_button_startend"
        android:backgroundTint="@color/very_light_black_green"
        android:text="@string/sign_in_btn_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayoutLogin" />

    <TextView
        android:id="@+id/goToSignUpTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_register"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/padding_to_bottom_for_scroll"
        android:textSize="@dimen/small_text_size"
        android:layout_marginTop="@dimen/small_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_login_register_label"
        android:text="@string/loginLabel"
        android:textColor="@color/black_green"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>